# agent-nexus

./: .cursorrules  .dockerignore  .env.production.example  .gitignore  .prettierignore  AGENTS.md  CLOUD_AGENTS.md  LICENSE  LICENSE-HEADER.txt  Makefile  README.md  docker-compose.yml  eslint.config.js  go.mod  package.json  playwright.integration.config.js  pnpm-lock.yaml
adapters/agent-bridge/: AGENTS.md  Makefile  README.md  pyproject.toml
adapters/agent-bridge/anx_agent_bridge/: anx_client.py  auth.py  bridge.py  cli.py  config.py  models.py  prompts.py  registry.py  state_store.py  util.py
adapters/agent-bridge/anx_agent_bridge/adapters/: __init__.py  acp_client.py  adapter_contract.py  base.py  deterministic_ack.py  python_plugin.py  subprocess_adapter.py  zeroclaw_gateway.py
adapters/agent-bridge/examples/: deterministic.toml  hermes.toml  subprocess.toml  zeroclaw.toml
adapters/agent-bridge/oar_agent_bridge/: bridge.py  cli.py  config.py  models.py  oar_client.py  registry.py  router.py  util.py
adapters/agent-bridge/oar_agent_bridge/adapters/: hermes_acp.py
adapters/agent-bridge/tests/: test_acp_client.py  test_anx_client.py  test_bridge.py  test_cli.py  test_config.py  test_deterministic_ack.py  test_oar_client.py  test_python_plugin.py  test_request_keys.py  test_router.py  test_subprocess_adapter.py  test_util.py  test_wake_packet.py
cli/: .gitignore  AGENTS.md  README.md  go.mod  go.sum
contracts/: AGENTS.md  README.md  anx-openapi.yaml  anx-schema.yaml  non-openapi-endpoints.yaml  oar-control-openapi.yaml  oar-openapi.yaml  oar-schema.yaml
(+986 files in other folders)
