[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "anx-agent-bridge"
version = "0.2.0"
description = "Bridge adapters for durable ANX wake requests"
readme = "README.md"
requires-python = ">=3.11"
authors = [{name = "OpenAI", email = "support@openai.com"}]
dependencies = [
  "httpx>=0.27,<1.0",
  "cryptography>=42,<47",
]

[project.optional-dependencies]
dev = ["pytest>=8,<9"]

[project.scripts]
anx-agent-bridge = "anx_agent_bridge.cli:main"

[tool.setuptools.packages.find]
include = ["anx_agent_bridge*"]
